test/error/LexInvalidChar.ci
public static @class Test //ERROR: Invalid character
{
	public static bool Run()
	{
		return true;
	}
}
